Fix overflows in custom css

--- a/packages/docs/docs/website/static/css/custom.css
+++ b/packages/docs/docs/website/static/css/custom.css
@@ -63,7 +63,7 @@
 header {
   height: 60px !important;
   padding: 0px 20px;
-  border-bottom: solid #ecf0f2 1px !important;
+  border-bottom: solid #D9D9D9 1px !important;
 }
 
 header > a {
@@ -78,8 +78,8 @@ header > a > h3 {
 pre code {
   display: block;
   margin: 2em 0;
-  padding: 40px!important;
-  font-size: 1em;
+  padding: 30px!important;
+  font-size: 0.95em;
   overflow-x: auto;
 }
 
@@ -99,6 +99,7 @@ h2.headerTitleWithLogo {
 }
 
 .postHeader {
+  font-size: 0.65em;
   padding: 0px;
 }
 
@@ -150,15 +151,14 @@ nav.toc .toggleNav ul {
 }
 
 nav.toc .toggleNav ul li a {
-  font-size: 1.1em;
-  padding: 5px 0 5px 0px;
+  font-size: 0.93em;
+  padding: 5px 0 10px 0px;
 }
 
 nav.toc .toggleNav ul li a.navItemActive {
   color: #1bcce5;
-  border-left: solid 1px #1bcce5;
-  font-weight: 600;
-  padding-left: 12px;
+  border-left: solid 3px #1bcce5;
+  padding-left: 10px;
 }
 
 nav.toc .toggleNav ul li a:hover {
@@ -378,9 +378,13 @@ footer .report-bugs {
 
 article h2 {
   color: black;
-  font-size: 1.4em !important;
+  font-size: 1.1em !important;
   font-weight: 600 !important;
   margin: 30px 0 0px 0;
+}
+
+article p {
+  font-size: 0.95em;
 }
 
 article p img, article iframe {
